not intended:

  obj.stub!(:msg)
  obj.msg
  obj.should_receive(:msg)
  
That would pass in 1.1.11, but should not have been allowed to, since the
message is received before the expectation is set. This was reported (#637)
and fixed for release 1.1.12, but may cause unexpected failures if you had
examples set up as above.

* 2 deprecations

  * deprecated ExampleMethods#implementation_backtrace - use ExampleMethods#backtrace instead
  * deprecated ExampleGroupMethods#example_group_backtrace - use ExampleGroupMethods#backtrace instead

* 6 major enhancements

  * it { should matcher } - support for implicit receiver of #should (Joe Ferris of thoughtbot)
  * subject { ... } - works in conjunction with implicit receiver of #should
  * wrap_expectation (for wrapping multiple expectations and/or t/u assertions)
  * added array.should =~ [1,2,3] # passes if array contains exactly the same elements in any order (Jeff Dean and Pat Maddox)
  * hash_including mock argument matcher can now accept just keys, key/value pairs, or both (David Krmpotic)
  * added hash_not_including mock argument matcher (David Krmpotic). Closes #634.

* 7 minor enhancements

  * should throw_symbol accepts an optional argument: should throw_symbol(:sym, arg)
  * fixed --line for jruby (Zach Moazeni)
  * assorted small changes to support Ruby 1.9 (got a way to go)
  * removed all instances of class << self - I do know who I am
  * SpecParser can't handle backtrace paths with colons (John-Mason P. Shackelford). Closes #505.
  * html formatter (and subsequently the textmate formatter) header fills in completely when running a single example
  * config.include now accepts an array of types (config.include(Helpers, :type => [:view, :controller]))
  
* 9 bug fixes

  * fixed bug where {:a => 1, :b => 2}.should include(:a, :b) failed (Yossef Mendelssohn)
  * only try to load Test::Unit if Test::Unit is defined (not just Test)