@@ -26,13 +26,28 @@ module Spec
         @mock.random_call(false)
       end
 
-      it "should accept fixnum as an_instance_of(Numeric)" do
-        @mock.should_receive(:random_call).with(an_instance_of(Numeric))
+      it "should accept fixnum as kind_of(Numeric)" do
+        @mock.should_receive(:random_call).with(kind_of(Numeric))
         @mock.random_call(1)
       end
 
       it "should accept float as an_instance_of(Numeric)" do
-        @mock.should_receive(:random_call).with(an_instance_of(Numeric))
+        @mock.should_receive(:random_call).with(kind_of(Numeric))
+        @mock.random_call(1.5)
+      end
+      
+      it "accepts fixnum as instance_of(Fixnum)" do
+        @mock.should_receive(:random_call).with(instance_of(Fixnum))
+        @mock.random_call(1)
+      end
+
+      it "should NOT accept fixnum as instance_of(Numeric)" do
+        @mock.should_not_receive(:random_call).with(instance_of(Numeric))
+        @mock.random_call(1)
+      end
+
+      it "should NOT accept float as instance_of(Numeric)" do
+        @mock.should_not_receive(:random_call).with(instance_of(Numeric))
         @mock.random_call(1.5)
       end
 
